2005-03-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: unresolved symbols when compiling without TLS
	* bugfix: unable to change directory when name ends with .

2005-03-07  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-5-1

2005-03-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: don't try to write empty buffer in LIST
	* bugfix: pasv_ip not working

2005-03-03  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added simple test suite (unit tests)
	* feature: removed obsolete perm_list
	* feature: removed all occurences of shm

2005-03-01  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: use permissions from command list

2005-02-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: perl: chmod, chgrp, chown
	* feature: perl warnings and errors are logged to a file
	* feature: tcl: chmod, chgrp, chown
	* bugfix: site_cmd not working
	* bugfix: remove context after client exit
	* bugfix: segfault when deleting inexistant group
	* bugfix: max_ul and max_dl not saved for groups (plaintext)

2005-02-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-5-0

2005-02-20  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: misc problems with str_dup, str_copy
	* feature: vars_group new (new group creation)

2005-02-13  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: some small memory leaks and potential buffer overflows

2005-02-11  Roman Bogorodskiy <bogorodskiy@inbox.ru>
	
	* feature: added HELP command

2005-02-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: server does not change uid when running as root
	* bugfix: added several mutexes to avoid race conditions
	* feature: CHPASS command changed to allow changing own password
	* feature: new directive 'server_gid'

2005-02-04  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new commands SSCN and CPSV, used for secure FXP
	* feature: errors in TCL module are catched and put in a log file
	* bugfix: file descriptors not closed on ident connections