@@ -3,6 +3,8 @@
 - use 'rats','splint', 'pscan' for security audit
 
 '********'
+- Use custom site commands exactly like standard commands
+'********'
 - #include <inttypes.h> and use PRIu64 for printf() with u64_t ( C99 ! )
 '********'
 - finish MLST
